[tests] Accept all tests back on 3.x