@@ -22,19 +22,18 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.apache.ibatis.executor.BatchResult;
 import org.apache.ibatis.session.ExecutorType;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.mybatis.spring.SqlSessionTemplate;
 import org.mybatis.spring.batch.domain.Employee;
 import org.springframework.batch.item.Chunk;
@@ -44,6 +43,7 @@ import org.springframework.dao.InvalidDataAccessResourceUsageException;
 /**
  * @author Putthiphong Boonphong
  */
+@ExtendWith(MockitoExtension.class)
 class MyBatisBatchItemWriterTest {
 
   @Mock
@@ -52,15 +52,10 @@ class MyBatisBatchItemWriterTest {
   @InjectMocks
   private MyBatisBatchItemWriter<Employee> writer;
 
-  @BeforeEach
-  void setUp() {
-    MockitoAnnotations.openMocks(this);
-  }
-
   @Test
   void testZeroBatchResultShouldThrowException() {
     Chunk<Employee> employees = Chunk.of(new Employee(), new Employee());
-    List<BatchResult> batchResults = Collections.emptyList();
+    List<BatchResult> batchResults = List.of();
 
     given(mockSqlSessionTemplate.flushStatements()).willReturn(batchResults);
 
@@ -73,7 +68,7 @@ class MyBatisBatchItemWriterTest {
 
     var batchResult = new BatchResult(null, null);
     batchResult.setUpdateCounts(new int[] { 1, 0 });
-    List<BatchResult> batchResults = Collections.singletonList(batchResult);
+    List<BatchResult> batchResults = List.of(batchResult);
 
     given(mockSqlSessionTemplate.flushStatements()).willReturn(batchResults);
 
