@@ -16,7 +16,6 @@
 package org.mybatis.spring.batch.builder;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,9 +27,10 @@ import org.apache.ibatis.session.SqlSessionFactory;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.batch.item.ExecutionContext;
 
 /**
@@ -40,6 +40,7 @@ import org.springframework.batch.item.ExecutionContext;
  *
  * @author Kazuki Shimizu
  */
+@ExtendWith(MockitoExtension.class)
 class MyBatisCursorItemReaderBuilderTest {
 
   @Mock
@@ -53,8 +54,6 @@ class MyBatisCursorItemReaderBuilderTest {
 
   @BeforeEach
   void setUp() {
-    MockitoAnnotations.openMocks(this);
-
     Mockito.when(this.sqlSessionFactory.openSession(ExecutorType.SIMPLE)).thenReturn(this.sqlSession);
     Mockito.when(this.cursor.iterator()).thenReturn(getFoos().iterator());
     Map<String, Object> parameters = new HashMap<>();
@@ -70,8 +69,8 @@ class MyBatisCursorItemReaderBuilderTest {
         var itemReader = new MyBatisCursorItemReaderBuilder<Foo>()
                 .sqlSessionFactory(this.sqlSessionFactory)
                 .queryId("selectFoo")
-                .parameterValues(Collections.singletonMap("id", 1))
-                .parameterValuesSupplier(() -> Collections.singletonMap("name", "Doe"))
+                .parameterValues(Map.of("id", 1))
+                .parameterValuesSupplier(() -> Map.of("name", "Doe"))
                 .build();
         // @formatter:on
     itemReader.afterPropertiesSet();
@@ -97,8 +96,8 @@ class MyBatisCursorItemReaderBuilderTest {
         var itemReader = new MyBatisCursorItemReaderBuilder<Foo>()
                 .sqlSessionFactory(this.sqlSessionFactory)
                 .queryId("selectFoo")
-                .parameterValues(Collections.singletonMap("id", 1))
-                .parameterValuesSupplier(() -> Collections.singletonMap("name", "Doe"))
+                .parameterValues(Map.of("id", 1))
+                .parameterValuesSupplier(() -> Map.of("name", "Doe"))
                 .saveState(false)
                 .build();
         // @formatter:on
@@ -123,8 +122,8 @@ class MyBatisCursorItemReaderBuilderTest {
         var itemReader = new MyBatisCursorItemReaderBuilder<Foo>()
                 .sqlSessionFactory(this.sqlSessionFactory)
                 .queryId("selectFoo")
-                .parameterValues(Collections.singletonMap("id", 1))
-                .parameterValuesSupplier(() -> Collections.singletonMap("name", "Doe"))
+                .parameterValues(Map.of("id", 1))
+                .parameterValuesSupplier(() -> Map.of("name", "Doe"))
                 .maxItemCount(2)
                 .build();
         // @formatter:on
